compiler/e2e/test/snapshot/borrow_checker/mutably_access_while_borrowed/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: mutable access is done while it is borrowed
   ╭─ compiler/e2e/test/snapshot/borrow_checker/mutably_access_while_borrowed/main.pnx:9:5
   │
 7 │     let numberRef = &number
   │                     ------- the borrow starts here
 8 │ 
 9 │     number = 2
   │     ^^^^^^^^^^ mutable access occurs here
10 │ 
11 │     consume(*numberRef)
   │             ---------- the borrow is used here

error: Compilation aborted due to 1 error(s)



stdout:
